[package]
name = "zip-builder"
version = "0.1.0"
authors = ["SAITO Atsushi <maldikulo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.deflate]
version = "0.8.6"
default-features = false

[profile.release]
lto = true
codegen-units = 1
