[package]
name = "zip-builder"
version = "0.1.0"
authors = ["SAITO Atsushi <maldikulo@gmail.com>"]
edition = "2024"
readme = "readme.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.deflate]
version = "1"
default-features = false

[profile.release]
lto = true
codegen-units = 1
