[package]
name = "zip-builder"
version = "0.1.0"
authors = ["SAITO Atsushi <maldikulo@gmail.com>"]
edition = "2024"
readme = "readme.md"
license = "MIT"

[dependencies]

deflate = { version = "1", default-features = false }
utcdatetime = { git = "https://github.com/SaitoAtsushi/utcdatetime.git", tag = "0.1" }
